[gd_scene load_steps=3 format=3 uid="uid://ca0ohfqspp2pg"]

[ext_resource type="Script" path="res://scenes/fishing.gd" id="1_cx5po"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vewt5"]
size = Vector3(40, 6, 40)

[node name="FishingWater" type="Area3D"]
collision_layer = 512
collision_mask = 524290
monitorable = false
script = ExtResource("1_cx5po")

[node name="FishingWaterCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, 0)
shape = SubResource("BoxShape3D_vewt5")

[connection signal="body_entered" from="." to="." method="_on_water_entered"]
[connection signal="body_exited" from="." to="." method="_on_water_exited"]
